
        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix initial QWebView focus behavior.

        focusController->setFocused(true) was not always called.
        https://bugs.webkit.org/show_bug.cgi?id=31466

        * Api/qwebpage.cpp:
        (QWebPagePrivate::focusInEvent):

2009-11-13  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        Use correct install-path when running qdoc3

        * docs/docs.pri:

2009-11-12  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        externalRepresentation should take Frame as the argument
        https://bugs.webkit.org/show_bug.cgi?id=31393

        No new tests as this is just a refactoring.

        * Api/qwebframe.cpp:
        (QWebFrame::renderTreeDump):

2009-11-12  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Jan Alonzo.

        [Qt] Various doc fixes
        https://bugs.webkit.org/show_bug.cgi?id=31358

        QWebPage's constructor docs are mentioning "QWebView":
        "Constructs an empty QWebView with parent".

        * Api/qwebpage.cpp:

2009-11-12  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Custom printing shrink factors
        https://bugs.webkit.org/show_bug.cgi?id=29042

        This reverts commit r49769. The public API for this needs to be reviewed
        before its inclusion in Qt.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        (QWebSettings::QWebSettings):
        * Api/qwebsettings.h:

2009-11-11  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] Various doc fixes
        https://bugs.webkit.org/show_bug.cgi?id=31358

        Fixed wrong documentation: item's dimensions do fit to Web page
        content by default.

        Kenneth agreed to land this as a followup patch to the
        just landed documentation patch.

        * Api/qgraphicswebview.cpp:
