@@ -262,7 +262,7 @@ QWebSettings* QWebSettings::globalSettings()
     setOfflineStoragePath() with an appropriate file path, and can limit the quota
     for each application by calling setOfflineStorageDefaultQuota().
 
-    \sa QWebPage::settings(), QWebView::settings(), {Browser}
+    \sa QWebPage::settings(), QWebView::settings(), {Web Browser}
 */
 
 /*!
@@ -555,7 +555,7 @@ QIcon QWebSettings::iconForUrl(const QUrl& url)
     return* icon;
 }
 
-/*!
+/*
     Returns the plugin database object.
 
 QWebPluginDatabase *QWebSettings::pluginDatabase()
